<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF3E0"
    android:orientation="vertical"
    app:ignore="NamespaceTypo"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="660dp"
        android:background="#FFF3E0"
        android:orientation="vertical"
        android:padding="20dp">


        <FrameLayout
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/orange" />

        <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventshouse"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/header"
            android:layout_marginBottom="-127dp"
            android:text="@string/intro"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contact"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/body"
            android:layout_marginBottom="-71dp"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="23sp" />


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/contact"
            android:layout_marginBottom="-68dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/linkedin"
            android:textAlignment="center"
            android:textColor="#1B5E20"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:icon="@android:drawable/ic_menu_save"
            app:iconTint="#1B5E20"
            app:iconTintMode="multiply"
            app:strokeColor="#FFFFFF" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button2"
            android:layout_marginBottom="-68dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/website"
            android:textAlignment="center"
            android:textColor="#1B5E20"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:icon="@android:drawable/ic_menu_save"
            app:iconTint="#1B5E20"
            app:iconTintMode="multiply"
            app:strokeColor="#FFFFFF" />

        <TextView
            android:id="@+id/developer1"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button3"
            android:layout_marginBottom="-160dp"
            android:text="@string/developers"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>
